k8s/istio/dev/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: circleguard-dev
spec:
  mtls:
    mode: STRICT
